feat: articles api implemented
